--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "url-pattern": "^1.0.1"
   },
   "dependencies": {
-    "body-parser": "^1.15.0",
-    "express": "^4.13.4",
-    "mongoose": "^4.4.13"
+    "bcryptjs": "^2.3.0",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "mongoose": "^4.6.5",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0"
   }
 }
